--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
     @for(rendererId of stRendererIds; track rendererId; let i = $index) {
         <app-viz 
-        [style.left.px]="i*130"
-            [stRendererInputId]="rendererId"
+        #visualizationItem
+        [stRendererInputId]="rendererId"
         ></app-viz>
     }
