Video 134 - adds the ability to create visualizations from the UI.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-    @for(rendererId of stRendererIds; track rendererId; let i = $index) {
-        <app-viz 
-        #visualizationItem
-        [stRendererInputId]="rendererId"
-        ></app-viz>
-    }
+<app-menu class="app-menu"></app-menu>
+
+@for(rendererId of stRendererIds; track rendererId; let i = $index) {
+    <app-viz 
+    #visualizationItem
+    tabindex="2"
+    [stRendererInputId]="rendererId"
+    ></app-viz>
+}
