--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
 app-viz {
     position: absolute;
+    overflow: visible;
+}
+app-viz:focus {
+    outline: none; /* remove default if replacing */
+    box-shadow: 0 0 0 3px rgba(100, 150, 250, 0.5);
+    border-color: #6496fa;
+    background-color: #eef3ff;
+}
+
+.app-menu {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1000; /* make sure it's above other content */
 }
