--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,12 @@ body {
     margin: 0px;
     background-color: black;
 }
-html, body { height: 100%; }
+html, body { 
+    height: 100%;
+    box-sizing: border-box;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+*, *::before, *::after {
+    box-sizing: inherit;
+  }
