--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-layout-menu  class="app-layout-menu"></app-layout-menu>
 <app-menu class="app-menu"></app-menu>
 
 <app-custom-layout></app-custom-layout>
