Video 162 - commits router-outlet implementation and refactors for component destroy and renew issues.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-layout-menu  class="app-layout-menu"></app-layout-menu>
 <app-menu class="app-menu"></app-menu>
 
-<app-custom-layout></app-custom-layout>
+<router-outlet></router-outlet>
