--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-    margin: 0px;
-    background-color: black;
-}
 html, body { 
-    height: 100%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    height: 100%;
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 *, *::before, *::after {
     box-sizing: inherit;
-  }
+    margin: 0;
+    padding: 0;
+}
+body { 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: black;
+}
