Video 165 - Implements the tabular layout.

--- a/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
+++ b/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
@@ -1,1 +1,14 @@
-<p>app-tabular-layout works!</p>
+@for(stRenderer of stRenderers; track stRenderer.stRendererId; let i = $index) {
+    <table>
+        <tr>
+            <td>
+                <app-viz 
+                #visualizationItem
+                tabindex="2"
+                [stRendererInputId]="stRenderer.stRendererId"
+                ></app-viz>
+            </td>
+            <td></td>
+        </tr>
+    </table>
+}
