Video 238 - Begins Update Implementation of Visualization Update.

--- a/src/app/components/app-menu/app-menu.component.html
+++ b/src/app/components/app-menu/app-menu.component.html
@@ -6,6 +6,7 @@
     tabindex="1"
     (click)="showMenu($event, menuTrigger)"
     [matMenuTriggerFor]="menu"
+    data-cy="more-options-button"
 >
     <mat-icon>more_vert</mat-icon>
 </button>
