--- a/src/app/components/layouts/app-update-layout/app-update-layout.component.html
+++ b/src/app/components/layouts/app-update-layout/app-update-layout.component.html
@@ -1,4 +1,34 @@
 <div class="outer">
-    <div class="visualization">VIZ</div>
-    <div class="editors">EDITORS</div>
+    <div 
+        class="visualization"
+        #viewer
+    >
+        @if(id > 0 && afterInitComplete) {
+            <app-viz
+             [stRendererInputId]="id"
+             [vizWidth]="viewerWidth"
+             [vizHeight]="viewerHeight"
+            ></app-viz>
+        }
+
+    </div>
+    <div class="editors">
+
+        SET UP THREE PUBLISHED THAT WILL PUBLISH ACTUAL VALUES USED
+        <p>EDITOR</p> 
+         @if(id > 0 && afterInitComplete) {
+        <div>
+                Aspect Ratio SHOULD BE: {{viewerWidth/viewerHeight}} 
+        </div>
+        <div>
+                CALCULATED Aspect Ratio IS: {{stPublisherService.calculatedAspectRatioSignal()[this.id]}}
+        </div>
+        <div>
+                ACTUAL Aspect Ratio IS:
+                <span data-cy="three-aspect-ratio"> 
+                {{threePublisherService.threeAspectRatioSignal()[this.id]}}
+                </span>
+        </div>
+        }
+    </div>
 </div>
