--- a/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
+++ b/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
@@ -11,6 +11,7 @@
             <td>
                 <button
                     data-cy="update-viz-button"
+                    tabindex="2"
                     (click)="editRendererItem(stRenderer.stRendererId)"
                     mat-stroked-button
                 >
@@ -18,6 +19,7 @@
                 </button>
                 <button
                     data-cy="delete-viz-button"
+                    tabindex="2"    
                     (click)="deleteRendererItem(stRenderer.stRendererId)"
                     mat-stroked-button class="warn-button"
                 >
