--- a/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
+++ b/src/app/components/layouts/app-tabular-layout/app-tabular-layout.component.html
@@ -1,33 +1,35 @@
 <table>
-@for(stRenderer of stRenderers; track stRenderer.stRendererId; let i = $index) {
+    <tbody>
+    @for(stRenderer of stRenderers; track stRenderer.stRendererId; let i = $index) {
 
-        <tr>
-            <td>
-                <app-viz 
-                #visualizationItem
-                tabindex="2"
-                [stRendererInputId]="stRenderer.stRendererId"
-                ></app-viz>
-            </td>
-            <td>
-                <button
-                    data-cy="update-viz-button"
+            <tr>
+                <td>
+                    <app-viz 
+                    #visualizationItem
                     tabindex="2"
-                    (click)="editRendererItem(stRenderer.stRendererId)"
-                    mat-stroked-button
-                >
-                    <mat-icon>edit</mat-icon> Update
-                </button>
-                <button
-                    data-cy="delete-viz-button"
-                    tabindex="2"    
-                    (click)="deleteRendererItem(stRenderer.stRendererId)"
-                    mat-stroked-button class="warn-button"
-                >
-                    <mat-icon>delete</mat-icon> Delete
-                </button>
-            </td>
-        </tr>
+                    [stRendererInputId]="stRenderer.stRendererId"
+                    ></app-viz>
+                </td>
+                <td>
+                    <button
+                        data-cy="update-viz-button"
+                        tabindex="2"
+                        (click)="editRendererItem(stRenderer.stRendererId)"
+                        mat-stroked-button
+                    >
+                        <mat-icon>edit</mat-icon> Update
+                    </button>
+                    <button
+                        data-cy="delete-viz-button"
+                        tabindex="2"    
+                        (click)="deleteRendererItem(stRenderer.stRendererId)"
+                        mat-stroked-button class="warn-button"
+                    >
+                        <mat-icon>delete</mat-icon> Delete
+                    </button>
+                </td>
+            </tr>
 
-}
+    }
+    </tbody>
 </table>
